--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "lodash": "^4.17.21",
+    "memorystore": "^1.6.7",
     "mongoose": "^6.5.0",
     "multer": "^1.4.5-lts.1"
   }
