--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "memorystore": "^1.6.7",
     "mongoose": "^6.5.0",
